<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecipeEditActivity" >

    <LinearLayout
        android:id="@+id/header_list"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="9"
            android:gravity="center"
            android:text="@string/header_add_title"
            android:textSize="8pt"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/save_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="0"
            android:contentDescription="@string/image_button"
            android:src="@drawable/saving_icon" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/add_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/header_list"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/recipe_picture"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/camera_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/recipe_title"
                android:textSize="7pt"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/recipe_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/recipe_ingredient"
                android:textSize="7pt"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/recipe_ingredient"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/recipe_cook"
                android:textSize="7pt"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/recipe_cook"
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:inputType="textMultiLine" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>