<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecipeViewActivity" >

    <LinearLayout
        android:id="@+id/header_list"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/view_delete_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0"
            android:contentDescription="@string/image_description"
            android:src="@drawable/recipe_delete" />

        <TextView
            android:id="@+id/view_recipe_title"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="9"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="8pt"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/view_edit_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="0"
            android:contentDescription="@string/image_description"
            android:src="@drawable/recipe_edit" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/add_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/header_list"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/view_picture"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/image_description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/recipe_ingredient"
                android:textSize="7pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/recipe_cook"
                android:textSize="7pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_cook_process"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>